src/test/deca/context/invalid/without_class/wrong_type_assignation.deca
// Description:
//    Error in type assignation
//
// Result:
//    INVALID_CAST: Type \(.\)\+ cannot be cast to type \(.\)\+
//    line 9

{    
    int i = 3.0;
}